For PS EA, if no address was defined or the selected address is invalid, allow the user to search for all the IPs that are used by EA PS

--- a/DeviceHandler/Views/SerialAndTCPView.xaml
+++ b/DeviceHandler/Views/SerialAndTCPView.xaml
@@ -6,7 +6,8 @@
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:local="clr-namespace:DeviceHandler.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" >
+             d:DesignHeight="450" d:DesignWidth="800" 
+             IsEnabled="{Binding IsEnabled}">
 
     <UserControl.Resources>
 
