Add Editing value

--- a/DeviceHandler/Resources/DeviceParamsListStyle.xaml
+++ b/DeviceHandler/Resources/DeviceParamsListStyle.xaml
@@ -1,6 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="clr-namespace:DeviceHandler.Controls">
+                    xmlns:controls="clr-namespace:DeviceHandler.Controls"
+                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
+
+
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/Controls;component/Resources/ToggleButtonWithIcon.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
+    <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 
     <Style x:Key="DeviceParamsListStyle" TargetType="ListViewItem">
         <Setter Property="Visibility" Value="{Binding Visibility}"/>
@@ -14,28 +22,58 @@
                             <ColumnDefinition Width="50" />
                             <ColumnDefinition Width="5" />
                             <ColumnDefinition Width="100" />
-                            <ColumnDefinition Width="5" />
-                            <ColumnDefinition Width="50" />
-                            <ColumnDefinition Width="5" />
-                            <ColumnDefinition Width="50" />
+                            <ColumnDefinition Width="2" />
+                            <ColumnDefinition Width="30" />
+                            <ColumnDefinition Width="2" />
+                            <ColumnDefinition Width="30" />
+                            <ColumnDefinition Width="2" />
+                            <ColumnDefinition Width="30" />
                         </Grid.ColumnDefinitions>
 
                         <TextBlock Text="{Binding Name}" Grid.Column="0" VerticalAlignment="Center"/>
                         <TextBlock Text="{Binding Units}" Grid.Column="2" VerticalAlignment="Center"/>
-                        <TextBox Text="{Binding Value}" Grid.Column="4" ToolTip="{Binding Value}"/>
+                        
+                        <TextBox Name="tbValue" Text="{Binding Value}" Grid.Column="4" ToolTip="{Binding Value}"/>
+                        <TextBox Name="tbEditValue" Text="{Binding EditValue}" Grid.Column="4" ToolTip="{Binding Value}"
+                                 BorderThickness="2"/>
 
-                        <Button Grid.Column="6" 
+                        <ToggleButton Grid.Column="6"
+                                      Style="{StaticResource ToggleButtonWithIconStyle}"
+                                      Width="25"
+                                      ToolTip="Edit"
+                                      Command="{Binding DataContext.EditCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=controls:EmptyListView}}"
+                                      CommandParameter="{Binding}"
+                                      Visibility="{Binding GetSetVisibility}"
+                                      IsChecked="{Binding IsEditing}">
+                            <iconPacks:PackIconMaterial Kind="LeadPencil" Width="15" Height="15"/>
+                        </ToggleButton>
+
+                        <Button Grid.Column="8" 
                                 Command="{Binding DataContext.SetCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=controls:EmptyListView}}" 
                                 CommandParameter="{Binding}" 
                                 Content="Set"
                                 Visibility="{Binding GetSetVisibility}"/>
-                        <Button Grid.Column="8" 
+                        <Button Grid.Column="10" 
                                 Command="{Binding DataContext.GetCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=controls:EmptyListView}}" 
                                 CommandParameter="{Binding}" 
                                 Content="Get"
                                 Visibility="{Binding GetSetVisibility}"/>
 
                     </Grid>
+
+                    <ControlTemplate.Triggers>
+
+                        <DataTrigger Binding="{Binding IsEditing}" Value="False">
+                            <Setter TargetName="tbValue" Property="Visibility" Value="Visible"/>
+                            <Setter TargetName="tbEditValue" Property="Visibility" Value="Collapsed"/>
+                        </DataTrigger>
+
+                        <DataTrigger Binding="{Binding IsEditing}" Value="True">
+                            <Setter TargetName="tbValue" Property="Visibility" Value="Collapsed"/>
+                            <Setter TargetName="tbEditValue" Property="Visibility" Value="Visible"/>
+                        </DataTrigger>
+                        
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
