--- a/DeviceHandler/ParamGetSetList/ParamGetSetListView.xaml
+++ b/DeviceHandler/ParamGetSetList/ParamGetSetListView.xaml
@@ -29,7 +29,7 @@
                                                    ButtonsVisibility="{Binding DataContext.ButtonsVisibility,RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}"                                             
                                                    SaveVisibility="{Binding DataContext.SaveVisibility,RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}"
                                                    TextBoxKeyUpEvent="{Binding DataContext.TextBox_KeyUpEvent,RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}"
-                                                   ComboBox_DropDownClosedEvent="{Binding DataContext.ComboBox_DropDownClosedEvent,RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}"
+                                                   ComboBox_SelectionChangedEvent="{Binding DataContext.ComboBox_SelectionChangedEvent,RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}"
                                                    HexTextBox_EnterEvent="{Binding DataContext.HexTextBox_EnterEvent,RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}"
                                                    HexTextBox_KeyDownEvent="{Binding DataContext.HexTextBox_HexKeyDownEvent,RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}"
                                                    HexTextBox_KeyUpEvent="{Binding DataContext.HexTextBox_HexKeyUpEvent,RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ListView}}"
@@ -55,7 +55,8 @@
                   MaxHeight="2000"
                   VirtualizingPanel.IsContainerVirtualizable="True"
                   VirtualizingPanel.IsVirtualizing="True"
-                  ScrollViewer.CanContentScroll="True">
+                  ScrollViewer.CanContentScroll="True"
+                  KeyboardNavigation.TabNavigation="Local">
             
             
         </ListView>
