--- a/DeviceHandler/Views/SelectedParametersListView.xaml
+++ b/DeviceHandler/Views/SelectedParametersListView.xaml
@@ -32,7 +32,8 @@
         <TextBlock Text="{Binding Title}" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Center"/>
 
         <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0, 5"
-                    HorizontalAlignment="Right">
+                    HorizontalAlignment="Right"
+                    Visibility="{Binding IsSaveLoad, Converter={StaticResource BooleanToVisibilityConverter}}">
 
             <Button Style="{StaticResource ButtonWithIconStyle}"
                         Margin="0,0,5,0"
