--- a/DeviceHandler/Views/SelectedParametersListView.xaml
+++ b/DeviceHandler/Views/SelectedParametersListView.xaml
@@ -7,7 +7,8 @@
              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
              xmlns:local="clr-namespace:DeviceHandler.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             BorderBrush="{DynamicResource MahApps.Brushes.Accent2}" BorderThickness="1">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -29,7 +30,7 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <TextBlock Text="{Binding Title}" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Center"/>
+        <TextBlock Text="{Binding Title}" FontSize="16" FontWeight="DemiBold" VerticalAlignment="Center" Margin="5,0,0,0"/>
 
         <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0, 5"
                     HorizontalAlignment="Right"
@@ -58,8 +59,9 @@
         <Line Grid.Row="1" X1="1" Stretch="Fill" Stroke="{DynamicResource MahApps.Brushes.Accent2}" />
 
         <StackPanel Grid.Row="2"
-                        Orientation="Horizontal"
-                        HorizontalAlignment="Left">
+                    Orientation="Horizontal"
+                    HorizontalAlignment="Left"
+                    Margin="5,0,0,0">
 
             <Button Style="{StaticResource ButtonWithIconStyle}"
                         Width="25"
