In Get/Set, make sure the the cursor is at the end of the text when the value changes.

--- a/DeviceHandler/ParamGetSetList/SingleParameterView.xaml
+++ b/DeviceHandler/ParamGetSetList/SingleParameterView.xaml
@@ -79,6 +79,7 @@
                                             RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}}"
                          IsReadOnly="{Binding IsReadOnly}"
                          KeyUp="tb_KeyUp"
+                         TextChanged="tb_TextChanged"
                          KeyboardNavigation.TabIndex="2"/>
 
                 <Grid>
