--- a/DeviceHandler/Views/ParametersView.xaml
+++ b/DeviceHandler/Views/ParametersView.xaml
@@ -136,7 +136,7 @@
                 <HierarchicalDataTemplate DataType="{x:Type mcu_modles:MCU_DeviceData}" ItemsSource="{Binding MCU_GroupList}" >
                     <TextBlock Text="{Binding Path=Name}" Margin="0,2" />
                 </HierarchicalDataTemplate>
-                <HierarchicalDataTemplate DataType="{x:Type dbc_modles:DBC_DeviceData}" ItemsSource="{Binding DBC_GroupList}" >
+                <HierarchicalDataTemplate DataType="{x:Type dbc_modles:DBC_DeviceData}" ItemsSource="{Binding DBC_FilesList}" >
                     <TextBlock Text="{Binding Path=Name}" Margin="0,2" ToolTip="{Binding DBCFilePath}"/>
                 </HierarchicalDataTemplate>
                 <HierarchicalDataTemplate DataType="{x:Type device_comm_models:DeviceData}" ItemsSource="{Binding ParemetersList}">
@@ -148,18 +148,21 @@
                 <HierarchicalDataTemplate DataType="{x:Type dbc_modles:DBC_ParamGroup}" ItemsSource="{Binding ParamsList}">
                     <TextBlock Text="{Binding Path=Name}" Margin="0,2"/>
                 </HierarchicalDataTemplate>
-                
+                <HierarchicalDataTemplate DataType="{x:Type dbc_modles:DBC_File}" ItemsSource="{Binding ParamsList}">
+                    <TextBlock Text="{Binding Path=Name}" Margin="0,2" ToolTip="{Binding FilePath}"/>
+                </HierarchicalDataTemplate>
+
                 <DataTemplate DataType="{x:Type device_comm_models:DeviceParameterData}" >
-                    <Grid>
+                    <Grid Margin="0,2" >
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="5" />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
 
-                        <TextBlock Grid.Column="0" Text="{Binding Path=Name}" Margin="0,2"/>
+                        <TextBlock Grid.Column="0" Text="{Binding Path=Name}" />
 
-                        <TextBlock Grid.Column="2" Text="{Binding Path=Units, StringFormat={}{0}}" Margin="0,2"/>
+                        <TextBlock Grid.Column="2" Text="{Binding Path=Units, StringFormat={}{0}}"/>
 
                     </Grid>
                 </DataTemplate>
