--- a/DeviceHandler/Views/ParametersView.xaml
+++ b/DeviceHandler/Views/ParametersView.xaml
@@ -9,6 +9,7 @@
              xmlns:mcu_modles="clr-namespace:DeviceCommunicators.MCU;assembly=DeviceCommunicators"
              xmlns:dbc_modles="clr-namespace:DeviceCommunicators.DBC;assembly=DeviceCommunicators"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" 
+             xmlns:converters="clr-namespace:DeviceHandler.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" MinWidth="200">
 
@@ -19,7 +20,7 @@
             </ResourceDictionary.MergedDictionaries>
 
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-
+            <converters:TreeViewWidthConverte x:Key="TreeViewWidthConverte" />
 
         </ResourceDictionary>
     </UserControl.Resources>
@@ -81,10 +82,10 @@
         </Grid>
 
         <TreeView Grid.Row="1" ItemsSource="{Binding DevicesList}"
-                          Background="Transparent"
-                          BorderBrush="{DynamicResource MahApps.Brushes.Accent2}"
-                          BorderThickness="1"
-                          FontSize="14">
+                  Background="Transparent"
+                  BorderBrush="{DynamicResource MahApps.Brushes.Accent2}"
+                  BorderThickness="1"
+                  FontSize="14">
 
             <i:Interaction.Triggers>
 
@@ -149,7 +150,27 @@
                     <TextBlock Text="{Binding Path=Name}" Margin="0,2"/>
                 </HierarchicalDataTemplate>
                 <HierarchicalDataTemplate DataType="{x:Type dbc_modles:DBC_File}" ItemsSource="{Binding ParamsList}">
-                    <TextBlock Text="{Binding Path=Name}" Margin="0,2" ToolTip="{Binding FilePath}"/>
+                    <Grid Width="{Binding ActualWidth, 
+                                          RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=TreeView},
+                                          Converter={StaticResource TreeViewWidthConverte}}">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="5" />
+                        </Grid.ColumnDefinitions>
+                        
+                        <TextBlock Grid.Column="0" Text="{Binding Path=Name}" Margin="0,2" ToolTip="{Binding FilePath}" />
+
+                        <Button Grid.Column="2" Style="{StaticResource ButtonWithIconStyle}"
+                                Width="15"
+                                Height="15"
+                                ToolTip="Remove DBC file"
+                                Command="{Binding DataContext.DBCRemoveCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=TreeView}}"
+                                CommandParameter="{Binding}">
+                            <iconPacks:PackIconMaterial Kind="TrashCan" Width="10" Height="10"/>
+                        </Button>
+                    </Grid>
                 </HierarchicalDataTemplate>
 
                 <DataTemplate DataType="{x:Type device_comm_models:DeviceParameterData}" >
