Use HexTextBoxView for the ID in CanConnectView

--- a/DeviceHandler/Views/CanConnectView.xaml
+++ b/DeviceHandler/Views/CanConnectView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:converter="clr-namespace:Converters;assembly=Converters"
+             xmlns:controls_view="clr-namespace:Controls.Views;assembly=Controls"
              xmlns:local="clr-namespace:DeviceHandler.Views"
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="900">
@@ -76,7 +77,27 @@
             <TextBlock Text="Node ID" VerticalAlignment="Center" Margin="0,0,5,0"/>
             <TextBox Text="{Binding SyncNodeID}" Margin="0,0,50,0" Width="100" />
 
-           
+            <controls_view:HexTextBoxView x:Name="tbMsgId" Margin="5" Width="100" >
+
+                <i:Interaction.Triggers>
+
+                    <i:EventTrigger EventName="HexKeyDownEvent">
+                        <i:InvokeCommandAction Command="{Binding Path=DataContext.HexKeyDownEventCommand, 
+                                             Mode=OneWay, 
+                                             RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}}" 
+                               PassEventArgsToCommand="True"/>
+                    </i:EventTrigger>
+
+                    <i:EventTrigger EventName="HexTextChangedEvent">
+                        <i:InvokeCommandAction Command="{Binding Path=DataContext.HexTextChangedEventCommand, 
+                                                                 Mode=OneWay, 
+                                                                 RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=UserControl}}" 
+                                                   PassEventArgsToCommand="True"/>
+                    </i:EventTrigger>
+
+                </i:Interaction.Triggers>
+
+            </controls_view:HexTextBoxView>
 
         </StackPanel>
 
