--- a/DeviceHandler/Faults/FaultMCU_SingleView.xaml
+++ b/DeviceHandler/Faults/FaultMCU_SingleView.xaml
@@ -56,7 +56,7 @@
                       CanUserDeleteRows="False">
 
                 <DataGrid.RowStyle>
-                    <Style TargetType="DataGridRow">
+                    <Style TargetType="DataGridRow" BasedOn="{StaticResource MahApps.Styles.DataGridRow}">
                         <Setter Property="Visibility" Value="{Binding IsVisible, Converter={StaticResource BooleanToVisibilityConverter}}" />
                     </Style>
                 </DataGrid.RowStyle>
